scraping for data

--- a/NoteBool Phishing Proyect.ipynb
+++ b/NoteBool Phishing Proyect.ipynb
@@ -511,9 +511,7 @@
     "    test_set_size = int(len(data)*test_ratio)\n",
     "    test_indices = shuffled_indices[:test_set_size]\n",
     "    train_indices = shuffled_indices[test_set_size:]\n",
-    "    return data.iloc[train_indices],data.iloc[test_indices]\n",
-    "    \n",
-    "    "
+    "    return data.iloc[train_indices],data.iloc[test_indices]"
    ]
   },
   {
